Adjusted Flicker Plate Delay and Fixed HTML5 Errors

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -576,7 +576,7 @@ ul.default {
 	display: none;
 }
 
-menu {
+.gallery-nav {
 	float:left;
 	width: 100%;
 	padding: 0;
